# type-records

./: CHANGELOG.md  type-records.cabal
.github/workflows/: haskell-ci.yml
src/Type/Records/: TH.hs
test/: Main.hs
