cabal-version:      3.0
name:               type-records
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ben Gamari
maintainer:         ben@smart-cactus.org
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Type.Records.TH
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      template-haskell,
                      th-abstraction
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite type-records-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        type-records
