cabal-version:      3.0
name:               type-records
version:            0.1.0.0
synopsis:           TemplateHaskell derivation of field accessors families of type-level records.
description:        TemplateHaskell derivation of field accessors families of type-level records.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ben Gamari
maintainer:         ben@smart-cactus.org
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:
tested-with:        GHC==9.10.1,
                    GHC==9.8.2,
                    GHC==9.6.4,
                    GHC==9.4.8,
                    GHC==9.2.8

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Type.Records.TH
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.16 && <4.21,
                      template-haskell <2.23,
                      th-abstraction >0.6 && <0.8
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite type-records-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        type-records
